	   Deferrari <utizoc@gmail.com> for the patch.
	9. Fix buffer overflow. Thanks to Frederik Deweerdt <deweerdt@free.fr>
	   for the patch.
       10. Made -ufbg and -fade options work under Xft ;).

    * Enhancements:
	1. Reduced memory footprint by roughly 5kb.
	2. Converted all source files to use the standard ts=8 for easier
	   diffing / online viewing.

Jimmy Zhou <jimmyzhou@users.sourceforge.net>
    * Bug Fixes:
	1. Fix mrxvtset.pl as pointed by Avi Yagodnick.
	2. Fix mouse button 4/5 behavior. Make it the same as firefox
	   as pointed out by Yoshihiko Kashio.
	3. Fix reverse video when foreground/background colors are not
	   defined. Thanks to Yoshihiko Kashio.
	4. Disable slave macros in the macro chains if the first (master)
	   macro is defined as dummy.
	5. Fix off-focus fading. Thanks to Ken Zalewski for the report.
	6. Add macros to check and set options. Extend the number of 
	   options.
	7. Add macros to check and unset X resources.
	8. Add macros to check and set NULL pointers.
	9. Fix some freeing NULL pointer issues.
	10.Fix black and white icons. Thanks to William Poetra Yoga
	   Hadisoeseno for the patch!
	11.Lots of code cleanup in command.c:rxvt_cmd_getc. Previously
	   it is lengthy and nearly unmaintenanble.
	12.Fix round-robin algorithm of command.c:rxvt_find_cmd_child.
	13.Fix crash if click on empty space of menubar. Thanks to Zhu
	   Qunying for the patch.
	14.Fix severl compile error - we must call DBG_MSG after variable
	   declaration in functions as we are using C, not C++. Thanks to
	   lzl@mitbbs.com for bringing this issue to me and provide patch.
	15.Fix unclosed file descriptors in child process.
	16.Fix session support. We actually did not listen on it because
	   the number of open file descriptor is small - we did not count
	   it!

    * Enhancements:
	1. Add --with-max-profiles to configure script as suggested
	   by Avi Yagodnick.
	2. Add experimental fast (hopefully) memory management code. It