@@ -173,6 +173,8 @@ static const struct {
     RSTRG(Rs_bgRefreshInterval, "bgRefreshInterval", "ms", 0),
 #endif
 
+    RSTRG(Rs_focusDelay, "focusDelay", "ms", 0 ),
+
 #ifdef OFF_FOCUS_FADING
     STRG(Rs_fade, "fading", "fade", "%", "make colors x% darker when losing focus", 0),
 #endif
